[package]
name = "geosign"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
qdrant-client = "1.11.0"
chrono = "0.4.38"
reqwest = "0.12.5"
serde = "1.0.207"
serde_json = "1.0.124"
tokio = { version = "1.39.2", features = ["rt-multi-thread", "rt", "macros"] }
tokio-postgres = "0.7.11"
tonic = "0.12.1"
lazy_static = "1.5.0"
rust_decimal = "1.35.0"
uuid = { version = "1.10.0", features = ["v4"] }
